# btg-energy-challenge

./: .gitignore  README.md  main.py  pylintrc  pyproject.toml
